--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
  <html>
    <head>
      <meta charset="utf-8" />
+    <meta name="detectify-verification" content="5899f87381af5e5d111e198e2f917bdf" />
     <link rel="shortcut icon" type="x-icon" href="environment.png" />
      <title>Hållbarhet i fokus</title>
      <link rel="stylesheet" href="style.css" />
